syntax = "proto3";

package EasyRpcMaster;

option csharp_namespace = "EasyRpc.Master";

import "Protos/EasyRpcTypes.proto";

service MasterService {
  rpc Register (RegistrationRequest) returns (RegistrationResponse);
  rpc Unregister (RegistrationRequest) returns (RegistrationResponse);  
  rpc Notify (EasyRpcTypes.Message) returns (EasyRpcTypes.Empty);
}

message RegistrationRequest {
  string registrationId = 1;
  string type = 2;
  string name = 3;
  string address = 4;  
  map<string, string> properties = 5;
}

message RegistrationResponse {
  string registrationId = 1;
  string status = 2;
  string message = 3;
}